[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/jogo2.gd" type="Script" id=1]
[ext_resource path="res://assets/jogo2/jogoErros_720p.png" type="Texture" id=2]
[ext_resource path="res://addons/dialogic/Dialog.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/font/KOMIKAX_.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 3
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 4 )

[node name="Jogo2 - 7Erros" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="Dialog" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 55.0
margin_top = 34.0
margin_right = 55.0
margin_bottom = 34.0
timeline = "timeline-1685492934.json"

[node name="LabelErros" type="Label" parent="."]
margin_left = 975.0
margin_top = 450.0
margin_right = 1195.0
margin_bottom = 517.0
rect_scale = Vector2( 1, 0.985736 )
custom_colors/font_color = Color( 0.501961, 0.0235294, 0.92549, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Faltam: 7"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label1" type="Label" parent="."]
margin_left = 200.0
margin_top = 10.0
margin_right = 453.0
margin_bottom = 64.0
custom_colors/font_color = Color( 0.0235294, 0.701961, 0.92549, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Obra Original"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button1" type="Button" parent="."]
margin_left = 734.0
margin_top = 142.0
margin_right = 766.0
margin_bottom = 264.0
flat = true

[node name="Button2" type="Button" parent="."]
margin_left = 1044.0
margin_top = 122.0
margin_right = 1086.0
margin_bottom = 181.0
flat = true

[node name="Button3" type="Button" parent="."]
margin_left = 844.0
margin_top = 68.0
margin_right = 888.0
margin_bottom = 93.0
flat = true

[node name="Button4" type="Button" parent="."]
margin_left = 934.0
margin_top = 66.0
margin_right = 991.0
margin_bottom = 86.0
flat = true

[node name="Button5" type="Button" parent="."]
margin_left = 668.0
margin_top = 179.0
margin_right = 683.0
margin_bottom = 199.0
flat = true

[node name="Button6" type="Button" parent="."]
margin_left = 668.0
margin_top = 273.0
margin_right = 680.0
margin_bottom = 293.0
flat = true

[node name="Button7" type="Button" parent="."]
margin_left = 878.0
margin_top = 158.0
margin_right = 893.0
margin_bottom = 179.0
flat = true

[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_Button7_pressed"]
